@@ -7,13 +7,19 @@ import com.mentoring.ecommerce.application.port.in.DeleteProductUserCase;
 import com.mentoring.ecommerce.application.port.in.FindProductUserCase;
 import com.mentoring.ecommerce.application.port.in.SaveProductUseCase;
 import com.mentoring.ecommerce.application.port.in.UpdateProductUserCase;
+import com.mentoring.ecommerce.domain.Product;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
+import static org.springframework.http.HttpStatus.CREATED;
+import static org.springframework.http.HttpStatus.NO_CONTENT;
 
 @RestController
 @RequestMapping("/api/products")
@@ -31,34 +37,46 @@ public class ProductController {
     private final ProductMapper productMapper;
 
     @PostMapping()
-    @ResponseStatus(HttpStatus.CREATED)
-    public void saveProduct(@Valid @RequestBody final ProductRequest request) {
-        saveUseCase.saveProduct(productMapper.toDomain(request));
+    @ResponseStatus(CREATED)
+    public ProductResponse saveProduct(@Valid @RequestBody final ProductRequest request) {
+        Product product = saveUseCase.saveProduct(productMapper.toDomain(request));
+        return productMapper.toResponse(product)
+                .add(linkTo(methodOn(ProductController.class).findProductById(product.getId())).withSelfRel())
+                .add(linkTo(methodOn(ProductController.class).findAllProducts()).withRel("products"));
     }
 
     @GetMapping
-    public ResponseEntity<List<ProductResponse>> findAllProducts() {
-        return ResponseEntity.ok().body(findUseCase.findAll().stream()
+    public List<ProductResponse> findAllProducts() {
+        return findUseCase.findAll().stream()
                 .map(productMapper::toResponse)
-                .toList());
+                .map(product -> product.add(linkTo(
+                        methodOn(ProductController.class).findProductById(product.getId())).withSelfRel()))
+                .collect(Collectors.toList());
     }
 
     @GetMapping("{productId}")
-    public ResponseEntity<ProductResponse> findProductById(@PathVariable(name = "productId") final Integer id) {
-        return ResponseEntity.ok().body(productMapper.toResponse(findUseCase.findById(id)));
+    public ProductResponse findProductById(@PathVariable(name = "productId") final Integer id) {
+        return productMapper.toResponse(findUseCase.findById(id))
+                .add(linkTo(ProductController.class).slash(id).withSelfRel())
+                .add(linkTo(methodOn(ProductController.class).findProductById(id)).withRel("update"))
+                .add(linkTo(methodOn(ProductController.class).deleteProduct(id)).withRel("delete"))
+                .add(linkTo(methodOn(ProductController.class).findAllProducts()).withRel("products"));
     }
 
     @PutMapping("{productId}")
-    public void updateProduct(
+    public ProductResponse updateProduct(
             @RequestBody final ProductRequest request,
             @PathVariable(name = "productId") final Integer id) {
-
-        updateUseCase.updateProduct(productMapper.toDomain(request), id);
+        Product product = updateUseCase.updateProduct(productMapper.toDomain(request), id);
+        return productMapper.toResponse(product)
+                .add(linkTo(methodOn(ProductController.class).findProductById(id)).withSelfRel())
+                .add(linkTo(methodOn(ProductController.class).findAllProducts()).withRel("products"));
     }
 
     @DeleteMapping("{productId}")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    public void deleteProduct(@PathVariable(name = "productId") Integer id) {
+    @ResponseStatus(NO_CONTENT)
+    ResponseEntity<?> deleteProduct(@PathVariable(name = "productId") Integer id) {
         deleteUseCase.deleteProduct(id);
+        return ResponseEntity.noContent().build();
     }
 }
